--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,19 +5,19 @@
     <string name="music_drawer">Music</string>
     <string name="downloads_drawer">Downloads</string>
     <string name="documents_drawer">Documents</string>
+    <string name="settings_drawer">Settings</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="fab_new_file">New File</string>
     <string name="fab_new_dir">New Directory</string>
     <string name="hint_new_file">File name...</string>
-    <string name="available_space">megabytes</string>
     <string name="free_space">Free space:</string>
     <string name="file_created">File Created</string>
     <string name="directory_created">Directory Created</string>
-    <string name="file_renamed">File Renamed</string>
-    <string name="file_deleted">File Deleted</string>
-    <string name="file_copied">File/Folder Copied</string>
-    <string name="file_moved">File/Folder Moved</string>
+    <string name="file_renamed">File/Directory Renamed</string>
+    <string name="file_deleted">File/Directory Deleted</string>
+    <string name="file_copied">File/Directory Copied</string>
+    <string name="file_moved">File/Directory Moved</string>
     <string name="empty_folder">Empty Folder</string>
     <string name="move_button">Move</string>
     <string name="copy_button">Copy</string>
@@ -27,5 +27,17 @@
     <string name="removable_sd">Removable SD Card</string>
     <string name="acitivty_not_found">No app can open this file</string>
     <string name="no_results">No results</string>
+    <string name="no_authorization">Authorization denied</string>
+    <string name="zip_button">Zip File(s)</string>
+    <string name="unzip_button">Unzip File</string>
+    <string name="file_zipped">File(s) successfully zipped!</string>
+    <string name="file_unzipped">File(s) successfully unzipped!</string>
+    <string name="error_unzip">The selected file is not a zip</string>
+    <string name="preferencefrag_default_folder">Choose default folders</string>
+    <string name="title_images_preference">Images Default Folder</string>
+    <string name="title_music_preference">Music Default Folder</string>
+    <string name="title_downloads_preference">Downloads default folder</string>
+    <string name="folder_should_settings">The folder should be in the root directory, otherwise it will not be found. </string>
+    <string name="informations">Informations</string>
 
 </resources>
