Added the theme chooser in settings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="title_downloads_preference">Downloads default folder</string>
     <string name="folder_should_settings">The folder should be in the root directory, otherwise it will not be found. </string>
     <string name="informations">Informations</string>
+    <string name="themes">Themes</string>
+    <string name="choose_theme">Choose a theme</string>
 
 </resources>
